--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
   box-sizing: border-box;
 }
 
-.container {
+.container{
   display: flex;
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: url('/images/bg-repeat.jpg');
+  background-image: url(/images/bg-repeat.jpg);
   background-size: contain;
 }
 
