--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: url(/images/bg-repeat.jpg);
+  background-image: url('/images/bg.jpg');
   background-size: contain;
 }
 
