--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: url('/images/imagem2.png');
+  background-image: url('/bg-repeat.jpg');
   background-size: contain;
 }
 
